--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 <main class="container">
   <div class="row justify-content-center">
     <section class="col-6 mt-5">
+      <h2>Login</h2>
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger"><%= el.msg %></div>
       <% }) %> <% } %> <% if (locals.messages.info) { %> <%
