--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,8 +28,8 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
-        <span>The #100Devs Social Network</span>
+        <h1 class=""><a href="/profile">Abbo Tutor Assistant</a></h1>
+        <span>A new, great way to manage your lessons</span>
       </div>
     </header>
   </body>
