--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,22 @@
                     <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
                         <input type="text" class="form-control" id="userName" name="userName">
-                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="name" class="form-label">Name</label>
+                      <input type="text" class="form-control" id="name" name="name">
+                    </div>
+                    <div class="mb-3">
+                      <label for="lastName" class="form-label">Last Name</label>
+                      <input type="text" class="form-control" id="lastName" name="lastName">
+                    </div>
+                    <div class="mb-3">
+                      <label for="role" class="form-label">Are you a Student or a Tutor?</label>
+                      <select class="form-select" aria-label="role" name="role">
+                        <option value="student">Student (my Tutor uses Abbo)</option>
+                        <option value="tutor">Tutor (my Students will use Abbo)</option>
+                      </select>
+                    </div>
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
@@ -29,7 +44,7 @@
                     <div class="mb-3">
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
-                      </div>
+                    </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
             </section>
