provisional placeholder work on index.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Abbo Tutor Assistant</a></h1>
+        <a href="/profile"><img src="imgs/Low Resolution Logo - Transparent Background.png" width="500"></img></a></br>
         <span>A new, great way to manage your lessons</span>
       </div>
     </header>
