--- a/views/studentProfile.ejs
+++ b/views/studentProfile.ejs
@@ -2,13 +2,13 @@
 
 <div class="container">
     <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-5">
             <div>
                 <h2>Welcome, <%= user.name %>!</h2>
                 <p><strong>Email</strong>: <%= user.email %></p>
                 <a href="/logout" class="col-3 btn btn-primary">Logout</a>
             </div>
-            <div class="mt-5">
+            <div class="mt-5 w-75">
                 <h2>Find a Calendar</h2>
                 <form action="/post/createPost" enctype="multipart/form-data" method="POST">
                   <div class="mb-3">
